--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "appid" : "__UNI__2DB4C47",
     "description" : "",
     "versionName" : "1.0.5",
-    "versionCode" : "100",
+    "versionCode" : 105,
     "transformPx" : false,
     /* 5+App特有相关 */
     "app-plus" : {
